--- a/app/proguard.cfg
+++ b/app/proguard.cfg
@@ -9,3 +9,12 @@
 -keep class com.actionbarsherlock.** { *; }
 -keep interface com.actionbarsherlock.** { *; }
 -keepattributes *Annotation*
+
+-keep class kotlin.** {*;}
+-dontwarn kotlin.**
+-dontwarn org.w3c.dom.events.*
+
+#-keeppackagenames org.jsoup.nodes
+-keep public class org.jsoup.** {
+public *;
+}
