--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 22
+    compileSdkVersion 23
     buildToolsVersion "22.0.1"
 
     signingConfigs {
@@ -20,7 +20,7 @@ android {
     defaultConfig {
         applicationId "ds.photosight"
         minSdkVersion 15
-        targetSdkVersion 22
+        targetSdkVersion 23
         versionCode 25
         versionName '0.9'
     }
@@ -53,7 +53,7 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:22.+'
+    compile 'com.android.support:appcompat-v7:23.+'
     compile 'org.jsoup:jsoup:1.8.2'
     compile 'com.github.castorflex.smoothprogressbar:library-circular:+'
     compile 'com.astuetz:pagerslidingtabstrip:+'
@@ -61,18 +61,6 @@ dependencies {
     compile 'de.greenrobot:eventbus:2.4.0'
     compile 'com.github.chrisbanes.photoview:library:+'
     compile files('libs/flurryagent.jar')
-    compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile "org.jetbrains.kotlin:kotlin-stdlib:+"
 }
 
-buildscript {
-    ext.kotlin_version = '0.12+'
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
-    }
-}
-repositories {
-    mavenCentral()
-}
