--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,8 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.2.3'
+        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:+"
     }
 }
 
