--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,9 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 28
 
     signingConfigs {
         release {
@@ -19,8 +19,8 @@ android {
 
     defaultConfig {
         applicationId "ds.photosight"
-        minSdkVersion 15
-        targetSdkVersion 23
+        minSdkVersion 16
+        targetSdkVersion 28
         versionCode 25
         versionName '0.9'
     }
@@ -44,8 +44,7 @@ android {
 
     applicationVariants.all { variant ->
         variant.outputs.each { output ->
-            output.outputFile = new File("d:/dev/photosight",
-                    "photosight${defaultConfig.versionName}-${variant.buildType.name}.apk")
+            output.outputFileName = "photosight${defaultConfig.versionName}-${variant.buildType.name}.apk"
         }
     }
 
@@ -53,14 +52,18 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:23.+'
-    compile 'org.jsoup:jsoup:1.8.2'
-    compile 'com.github.castorflex.smoothprogressbar:library-circular:+'
-    compile 'com.astuetz:pagerslidingtabstrip:+'
-    compile 'com.googlecode.android-query:android-query:0.25.9'
-    compile 'de.greenrobot:eventbus:2.4.0'
-    compile 'com.github.chrisbanes.photoview:library:+'
-    compile files('libs/flurryagent.jar')
-    compile "org.jetbrains.kotlin:kotlin-stdlib:+"
+    def androidX = "1.3.0"
+
+    implementation("com.jakewharton.timber:timber:4.7.1")                                       // https://github.com/JakeWharton/timber
+
+    implementation("androidx.core:core:$androidX")
+    implementation("com.google.android.material:material:1.1.0")
+    implementation 'org.jsoup:jsoup:1.8.2'
+    implementation 'com.github.castorflex.smoothprogressbar:library-circular:+'
+    //implementation 'com.astuetz:pagerslidingtabstrip:+'
+    implementation 'com.googlecode.android-query:android-query:0.25.9'
+    implementation 'de.greenrobot:eventbus:2.4.0'
+    implementation 'com.github.chrisbanes.photoview:library:+'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:1.3.72"
 }
 
