--- a/build.gradle
+++ b/build.gradle
@@ -2,15 +2,17 @@
 buildscript {
     repositories {
         jcenter()
+        google()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:+"
+        classpath 'com.android.tools.build:gradle:4.0.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.72"
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        google()
     }
 }
