--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+<manifest
+    xmlns:android="http://schemas.android.com/apk/res/android"
     package="ds.photosight"
-
     >
 
     <application
-        android:name="ds.photosight.App"
+        android:name=".App"
         android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:theme="@style/AppTheme"
         >
 
         <activity
@@ -18,18 +19,10 @@
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <!--<activity android:name="ds.photosight_legacy.ui.PreferencesActivity" />-->
-
-        <!--<activity
-            android:name="ds.photosight_legacy.ui.GalleryActivity"
-            android:label=".ui.GalleryActivity"
-            android:theme="@style/Theme.MySherlockBlack"
-            android:uiOptions="splitActionBarWhenNarrow"
-            />-->
-
     </application>
+
 </manifest>
