--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,4 @@ android.useAndroidX=true
 android.enableJetifier=false
 org.gradle.caching=true
 android.enableR8.fullMode=true
+org.gradle.jvmargs=-Xmx4608m
