--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -12,13 +12,13 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Photosight2"
+        android:theme="@style/Theme.Photosight"
         android:usesCleartextTraffic="true"
         >
         <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:theme="@style/SplashTheme"
+            android:theme="@style/Theme.Splash"
             >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
