--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Photosight"
-        android:usesCleartextTraffic="true"
         >
+        <!--android:networkSecurityConfig="@xml/network_security_config"-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -30,11 +30,13 @@
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}"
+            android:exported="false"
             android:grantUriPermissions="true"
-            android:exported="false">
+            >
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/filepaths" />
+                android:resource="@xml/filepaths"
+                />
         </provider>
 
     </application>
