--- a/compose/src/main/AndroidManifest.xml
+++ b/compose/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/Theme.Photosight"
+        android:networkSecurityConfig="@xml/network_security_config"
         >
-        <!--android:networkSecurityConfig="@xml/network_security_config"-->
         <activity
             android:name=".MainActivity"
             android:exported="true"
