photo parsing fix

--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,6 @@ android.enableJetifier=false
 org.gradle.caching=true
 android.enableR8.fullMode=true
 org.gradle.jvmargs=-Xmx4608m
+android.nonTransitiveRClass=false
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
